--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@handsontable/vue3": "^15.2.0",
+    "@vant/area-data": "^2.0.0",
     "axios": "^1.7.7",
     "base64-js": "^1.5.1",
     "compressorjs": "^1.2.1",
@@ -32,8 +33,8 @@
     "vue": "^3.2.47",
     "vue-device-detector": "^1.1.6",
     "vue-router": "^4.1.6",
-    "xlsx": "^0.18.5",
-    "vue-virtual-scroller": "^2.0.0-beta.8"
+    "vue-virtual-scroller": "^2.0.0-beta.8",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
