--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "is-ci": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
+    "sass": "^1.89.0",
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-vue-components": "^28.4.1",
