--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "handsontable": "^15.2.0",
     "js-sha256": "^0.11.0",
     "less": "^4.1.3",
+    "lunisolar": "^2.5.2",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.1",
     "pinyin-match": "^1.2.6",
