--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "handsontable": "^15.2.0",
+    "js-calendar-converter": "^0.0.7",
     "js-sha256": "^0.11.0",
     "less": "^4.1.3",
+    "lunar-javascript": "^1.7.3",
     "lunisolar": "^2.5.2",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.1",
