--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "js-calendar-converter": "^0.0.7",
     "js-sha256": "^0.11.0",
     "less": "^4.1.3",
-    "lunar-javascript": "^1.7.3",
+    "lunar-typescript": "^1.8.0",
     "lunisolar": "^2.5.2",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.1",
