--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lunar-typescript": "^1.8.0",
     "lunisolar": "^2.5.2",
     "pinia": "^2.2.4",
+    "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^4.1.1",
     "pinyin-match": "^1.2.6",
     "tdesign-vue-next": "^1.11.4",
