--- a/package.json
+++ b/package.json
@@ -13,19 +13,16 @@
     "prepare": "node -e \"if(require('fs').existsSync('.git')){process.exit(1)}\" || is-ci || husky install"
   },
   "dependencies": {
-    "@handsontable/vue3": "^15.2.0",
     "@vant/area-data": "^2.0.0",
+    "@vueuse/core": "^13.3.0",
     "axios": "^1.9.0",
     "base64-js": "^1.5.1",
     "compressorjs": "^1.2.1",
-    "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
-    "handsontable": "^15.2.0",
     "js-calendar-converter": "^0.0.7",
     "js-sha256": "^0.11.0",
     "less": "^4.1.3",
-    "lunar-typescript": "^1.8.0",
     "lunisolar": "^2.5.2",
     "pinia": "^2.2.4",
     "pinia-plugin-persist": "^1.0.0",
@@ -36,9 +33,7 @@
     "vant": "^4.9.17",
     "vue": "^3.2.47",
     "vue-device-detector": "^1.1.6",
-    "vue-router": "^4.1.6",
-    "vue-virtual-scroller": "^2.0.0-beta.8",
-    "xlsx": "^0.18.5"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
