--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "vant": "^4.9.17",
     "vue": "^3.2.47",
     "vue-device-detector": "^1.1.6",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "weixin-js-sdk": "^1.6.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
