--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tdesign-vue-next": "^1.11.4",
     "uuid": "^9.0.0",
     "vant": "^4.9.17",
+    "vconsole": "^3.15.1",
     "vue": "^3.2.47",
     "vue-device-detector": "^1.1.6",
     "vue-router": "^4.1.6",
