--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL="http://www.tianshunchenjie.com"
+VITE_API_BASE_URL="https://www.tianshunchenjie.com"
 # VITE_API_BASE_URL="http://10.0.108.167:3000"
 
 VITE_ENC_SALT="51d82a57-ceac-4b3b-9a49-402a9e243111"
