--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "sass": "^1.89.0",
+    "terser": "^5.43.1",
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-vue-components": "^28.4.1",
