--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compressorjs": "^1.2.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
+    "echarts": "^5.6.0",
     "js-calendar-converter": "^0.0.7",
     "js-sha256": "^0.11.0",
     "less": "^4.1.3",
