--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue": "^3.2.47",
     "vue-device-detector": "^1.1.6",
     "vue-router": "^4.1.6",
+    "vue3-beautiful-chat": "^3.4.2",
     "weixin-js-sdk": "^1.6.5"
   },
   "devDependencies": {
