--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-sha256": "^0.11.0",
     "less": "^4.1.3",
     "localforage": "^1.10.0",
+    "lodash-es": "^4.17.21",
     "lunisolar": "^2.5.2",
     "opencc-js": "^1.0.5",
     "pinia": "^3.0.3",
