--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.14.2",
     "@types/uuid": "^9.0.1",
     "@vant/auto-import-resolver": "^1.3.0",
